--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "google-auth-library": "^6.1.3",
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.1"
+    "mongoose": "^5.11.1",
+    "popups": "^1.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
